[package]
name = "sparql-joins"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
atty = "0.2.14"
clap = { version = "3.2.8", features = ["derive"] }
itertools = "0.10.3"
lazy_static = "1.4.0"
libc = "0.2.126"
memchr = "2.5.0"
memmap = "0.7.0"
nonzero_lit = "0.1.2"
rayon = "1.5.3"
